[spark] Refactor and add initial repl that captures the input/output of spark